--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-# Puppet module: jenkins
+== Puppet module: jenkins
 
 This is a Puppet jenkins module from the second generation of Example42 Puppet Modules.
 
@@ -8,7 +8,7 @@ Released under the terms of Apache 2 License.
 
 Check Modulefile for dependencies.
 
-## GENERAL USAGE
+=== GENERAL USAGE
 This module can be used in 2 ways:
 
 * With the old style "Set variables and include class" pattern:
@@ -51,7 +51,7 @@ The examples use parametrized classes, but for all the parameters you can set a 
 
 For example, the variable "$jenkins_absent" is equivant to the "absent =>" parameter.
 
-## USAGE - Basic management
+=== USAGE - Basic management
 * Install jenkins with default settings
 
         class { "jenkins": }
@@ -98,7 +98,7 @@ For example, the variable "$jenkins_absent" is equivant to the "absent =>" param
         }
 
 
-## USAGE - Overrides and Customizations
+=== USAGE - Overrides and Customizations
 * Use custom sources for main config file 
 
         class { "jenkins":
@@ -137,7 +137,7 @@ For example, the variable "$jenkins_absent" is equivant to the "absent =>" param
         }
 
 
-## USAGE - Example42 extensions management 
+=== USAGE - Example42 extensions management 
 * Activate puppi (recommended, but disabled by default)
   Note that this option requires the usage of Example42 puppi module
 
